# BreakingNews_TelegramBot

./: .dockerignore  .gitignore  News.db  README.md  config.py  container.py  docker-compose.yml  fill_db.py  main.py  models.py  pyproject.toml  requirements.txt
DB/: database.py  models.py
DB/diagram/: db_prototype.drawio
DB/serializers/: agency_serializer.py  favorites_serializer.py  news_serializer.py  user_serializer.py
DB/services/: agency_service.py  favorites_services.py  news_service.py  user_service.py
diagram/: db_prototype.drawio
parsing/: meta.py  parser_parent.py  urls.py
parsing/BaikalDaily/: baikal_daily.py  index.html
parsing/CityN/: city_n.py  index.html
parsing/IrkRu/: index.html  irk_ru.py
serializers/: action_serializer.py  agency_serializer.py  expectedMove_serializer.py  favorites_serializer.py  news_serializer.py  user_serializer.py
services/: action_service.py  agency_service.py  expectedMove_service.py  favorites_services.py  news_service.py  user_service.py
utils/: answers_helper.py  request_helper.py
