[tool.poetry]
name = "breakingnews-telegrambot"
version = "0.1.0"
description = ""
authors = ["Lockerio <goryunov.arkadiy@gmail.com>"]
readme = "README.md"
packages = [{include = "breakingnews_telegrambot"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
