[tool.poetry]
name = "breakingnews-telegrambot"
version = "0.1.0"
description = ""
authors = ["Lockerio <goryunov.arkadiy@gmail.com>"]
readme = "README.md"
packages = [{include = "breakingnews_telegrambot"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.13"
pytelegrambotapi = "^4.11.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
